--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,15 +1,31 @@
 .callout {
-	
+	width: 150px ;
+    margin: 10px ;
+    border: 1px ;
+    padding:10px ;
+    background-color: navy ;
+    text-decoration:white ;
 }
 
 .callout img {
-	
+	position: float;
+    margin: 1px;
+    border: 1px solid gray ;
+    padding: 10px ;
+    background-color:navy ;
+    width:50px ;
+    height: 50px ;
+
 }
 
 blockquote {
-	
+	margin:1px ;
 }
 
 cite {
-	
+    display:inline ;
+    border-top: 0 ;
+    padding-top: 1px ;
+    text-align: right ;
+    font-size:20px ;
 }
