--- a/week02/styles/temple.css
+++ b/week02/styles/temple.css
@@ -15,6 +15,7 @@ picture img{
     margin: 0 auto;
     display: block;
     margin: 0 auto;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 }
 section{
@@ -34,3 +35,4 @@ footer p{
     padding: 10px;
     text-align: center;
 }
+
