--- a/week02/styles/temple.css
+++ b/week02/styles/temple.css
@@ -8,14 +8,16 @@
 h1{
     text-align: center;
 }
-
+picture {
+     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 picture img{
     width: 350px;
     height: auto;
     margin: 0 auto;
     display: block;
     margin: 0 auto;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+   
 
 }
 section{
@@ -35,5 +37,6 @@ footer p{
     padding: 10px;
     text-align: center;
 }
+
 
 
